--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
             <nav> <!-- Barra de navegação -->
                 <div class="links">
                     <ul class="nav-itens">
-                        <li><a href="sobrenos.html">Sobre</a></li>
-                        <li><a href="pag-planos.html">Planos</a></li> 
-                        <li><a href="catalogo.html">Catálogo</a></li> 
+                        <li><a href="./HTML/sobrenos.html">Sobre</a></li>
+                        <li><a href="./HTML/pag-planos.html">Planos</a></li> 
+                        <li><a href="./HTML/catalogo.html">Catálogo</a></li> 
                     </ul>
                 </div>
                 <div class="btn"> <!-- Botões de login e cadastro -->
-                    <a href="login.html">
+                    <a href="./HTML/login.html">
                         <button class="login">LOGIN</button> <!-- Botão "LOGIN" -->
                     </a>
-                    <a href="cadastro.html">
+                    <a href="./HTML/cadastro.html">
                         <button class="cadastro">CADASTRO</button> <!-- Botão "CADASTRO" -->
                     </a>
                 </div>
