alterações no html, css e javascript

--- a/HTML/dados-compra3.html
+++ b/HTML/dados-compra3.html
@@ -42,10 +42,10 @@
         <section>
         <div class="login-principal"> <!-- Div criada para o login principal -->
             <div class="movimentar">
-                <h2 style="color: white; position: relative; top: 15px; font-size: 30px;">Plano premium</h2>
+                <h2 style="color: white; position: relative; top: 1px; font-size: 30px; margin-bottom: 8px;">Plano premium</h2>
                 <div class="right-login">
                     <div class="card-login"> <!-- Card do login -->
-                        <h1>Informe os dados do seu cartão de crédito ou débito</h1>
+                        <h1 style="text-align: center;">Informe os dados do seu cartão de crédito ou débito</h1>
                         <div class="campodetexto">
                             <label for="Nome">Nome</label>
                             <input type="text" name="usuario" placeholder="Nome" id="usuario" required> <!-- Campo de Nome -->
