--- a/HTML/cadastro.html
+++ b/HTML/cadastro.html
@@ -80,6 +80,7 @@
                                 <p>Já tem uma conta? <a class="cor-entre" href="login.html">Entre</a></p>
                             </div>
                             <button class="btn-cadastro" onclick="cadastrar()">Enviar</button>
+                            <p id="mensagem"></p>
                         </div>
                     </div>
                 </div>
