--- a/HTML/dados-compra.html
+++ b/HTML/dados-compra.html
@@ -47,7 +47,7 @@
                         básico</h2>
                     <div class="right-login">
                         <div class="card-login"> <!-- Card do login -->
-                            <h1 style="text-align: center;">Informe os dados do seu cartão de crédito ou débito</h1>
+                            <h1 style="text-align: center;">Informe os dados do seu cartão de crédito ou débito.</h1>
                             <div class="campodetexto">
                                 <label for="Nome">Nome</label>
                                 <input type="text" name="usuario" placeholder="Nome" id="usuario" required>
