alterações feitas no html e javascript

--- a/HTML/dados-compra3.html
+++ b/HTML/dados-compra3.html
@@ -58,7 +58,7 @@
                                 <!-- Campo de Sobrenome -->
                             </div>
                             <div class="campodetexto">
-                                <label for="numero-cartao">Numero do cartão</label>
+                                <label for="numero-cartao">Número do cartão</label>
                                 <input type="text" name="numero-cartao" placeholder="Número do cartão"
                                     id="numero-cartao" required> <!-- Campo para o número do cartão -->
                             </div>
