--- a/HTML/login.html
+++ b/HTML/login.html
@@ -48,8 +48,9 @@
                 <div class="card-login"> <!--card do login-->
                     <h1>LOGIN</h1>
                     <div class="campodetexto">
-                        <label for="usuario">Usuário</label>
-                        <input type="text" name="usuario" placeholder="Usuário" id="usuario" required>
+                        <label for="email">E-mail</label>
+                        <input type="email" name="email" placeholder="Insira seu e-mail neste campo" id="email" required>
+                        <input style="display: none;" type="text" name="usuario" id="usuario" required>
                     </div>
                     <div class="campodetexto">
                         <label for="senha">Senha</label>
