--- a/HTML/feedback.html
+++ b/HTML/feedback.html
@@ -52,19 +52,19 @@
                     <input type="text" id="mensagem" autocomplete="none" placeholder="Mensagem" required>
                     <div class="avaliacao-estrelas">
                         
-                        <a href="javascript:void(0)" onclick="Avaliar(1);">
+                        <a href="#" onclick="Avaliar(1);">
                             <img src="../Img/star0.png" id="s1">
                         </a>
-                        <a href="javascript:void(0)" onclick="Avaliar(2);">
+                        <a href="#" onclick="Avaliar(2);">
                             <img src="../Img/star0.png" id="s2">
                         </a>
-                        <a href="javascript:void(0)" onclick="Avaliar(3);">
+                        <a href="#" onclick="Avaliar(3);">
                         <img src="../Img/star0.png" id="s3">
                         </a>
-                        <a href="javascript:void(0)" onclick="Avaliar(4);">
+                        <a href="#" onclick="Avaliar(4);">
                             <img src="../Img/star0.png" id="s4">
                         </a>
-                        <a href="javascript:void(0)" onclick="Avaliar(5);">
+                        <a href="#" onclick="Avaliar(5);">
                             <img src="../Img/star0.png" id="s5">
                         </a>
                         <p id="rating">0</p>
