--- a/HTML/cadastro.html
+++ b/HTML/cadastro.html
@@ -75,7 +75,7 @@
                             <div class="campodetexto">
                                 <div class="check">
                                     <input type="checkbox" name="usuario" id="checkbox" required>
-                                    <label for="checkbox">Li e aceito com os termos de uso e politica de privacidade</label>
+                                    <label for="checkbox">Li e aceito os termos de uso e a política de privacidade.</label>
                                 </div>
                                 <p>Já tem uma conta? <a class="cor-entre" href="login.html">Entre</a></p>
                             </div>
