alteraçoes html, css e javascript

--- a/HTML/dados-compra2.html
+++ b/HTML/dados-compra2.html
@@ -41,12 +41,12 @@
 
     <main>
         <section>
-            <div class="login-principal"> <!-- Div criada para o login principal -->
+            <div class="dadoscompras2-principal"> <!-- Div criada para o dados compras2 principal -->
                 <div class="movimentar">
                     <h2 style="color: white; position: relative; top: 1px; font-size: 30px; margin-bottom: 8px;">Plano
                         padrão</h2>
-                    <div class="right-login">
-                        <div class="card-login"> <!-- Card do login -->
+                    <div class="right-dadoscompras2">
+                        <div class="card-dadoscompras2"> <!-- Card do dados compras2 -->
                             <h1 style="text-align: center;">Informe os dados do seu cartão de crédito ou débito.</h1>
                             <div class="campodetexto">
                                 <label for="Nome">Nome</label>
@@ -86,7 +86,7 @@
                                         privacidade</label>
                                 </div>
                             </div>
-                            <button class="btn-login">Enviar</button> <!-- Botão de envio do formulário -->
+                            <button class="btn-dadoscompras2">Enviar</button> <!-- Botão de envio do formulário -->
                         </div>
                     </div>
                 </div>
