--- a/HTML/dados-compra3.html
+++ b/HTML/dados-compra3.html
@@ -40,12 +40,12 @@
     </section>
     <main>
         <section>
-            <div class="login-principal"> <!-- Div criada para o login principal -->
+            <div class="dadoscompras3-principal"> <!-- Div criada para o dados compras3 principal -->
                 <div class="movimentar">
                     <h2 style="color: white; position: relative; top: 1px; font-size: 30px; margin-bottom: 8px;">Plano
                         premium</h2>
-                    <div class="right-login">
-                        <div class="card-login"> <!-- Card do login -->
+                    <div class="right-dadoscompras3">
+                        <div class="card-dadoscompras3"> <!-- Card do dados compras3 -->
                             <h1 style="text-align: center;">Informe os dados do seu cartão de crédito ou débito.</h1>
                             <div class="campodetexto">
                                 <label for="Nome">Nome</label>
@@ -85,7 +85,7 @@
                                         privacidade</label>
                                 </div>
                             </div>
-                            <button class="btn-login">Enviar</button> <!-- Botão de envio do formulário -->
+                            <button class="btn-dadoscompras3">Enviar</button> <!-- Botão de envio do formulário -->
                         </div>
                     </div>
                 </div>
