--- a/HTML/dados-compra.html
+++ b/HTML/dados-compra.html
@@ -41,12 +41,11 @@
 
     <main>
         <section>
-            <div class="login-principal"> <!-- Div criada para o login principal -->
+            <div class="dadoscompras-principal"> <!-- Div criada para o dados compras principal -->
                 <div class="movimentar">
-                    <h2 style="color: white; position: relative; top: 1px; font-size: 30px; margin-bottom: 8px;">Plano
-                        básico</h2>
-                    <div class="right-login">
-                        <div class="card-login"> <!-- Card do login -->
+                    <h2 style="color: white; position: relative; top: 1px; font-size: 30px; margin-bottom: 8px;">Plano básico</h2>
+                    <div class="right-dadoscompras">
+                        <div class="card-dadoscompras"> <!-- Card do dados compras -->
                             <h1 style="text-align: center;">Informe os dados do seu cartão de crédito ou débito.</h1>
                             <div class="campodetexto">
                                 <label for="Nome">Nome</label>
@@ -86,7 +85,7 @@
                                         privacidade</label>
                                 </div>
                             </div>
-                            <button class="btn-login">Enviar</button> <!-- Botão de envio do formulário -->
+                            <button class="btn-dadoscompras">Enviar</button> <!-- Botão de envio do formulário -->
                         </div>
                     </div>
                 </div>
