alterações dados compras

--- a/HTML/dados-compra.html
+++ b/HTML/dados-compra.html
@@ -49,18 +49,17 @@
                             <h1 style="text-align: center;">Informe os dados do seu cartão de crédito ou débito.</h1>
                             <div class="campodetexto">
                                 <label for="Nome">Nome</label>
-                                <input type="text" name="usuario" placeholder="Nome" id="usuario" required>
+                                <input type="text" name="nome" placeholder="Nome" id="nome" required>
                                 <!-- Campo de Nome -->
                             </div>
                             <div class="campodetexto">
                                 <label for="sobrenome">Sobrenome</label>
-                                <input type="text" name="sobrenome" placeholder="Sobrenome" id="email" required>
+                                <input type="text" name="sobrenome" placeholder="Sobrenome" id="sobrenome" required>
                                 <!-- Campo de Sobrenome -->
                             </div>
                             <div class="campodetexto">
                                 <label for="numero-cartao">Número do cartão</label>
-                                <input type="text" name="numero-cartao" placeholder="Número do cartão"
-                                    id="numero-cartao" required> <!-- Campo para o número do cartão -->
+                                <input type="text" name="numero-cartao" placeholder="Número do cartão" id="numero-cartao" required> <!-- Campo para o número do cartão -->
                             </div>
                             <div class="campodetexto">
                                 <label for="data">Informe sua data de nascimento</label>
