--- a/HTML/dados-compra2.html
+++ b/HTML/dados-compra2.html
@@ -50,12 +50,12 @@
                             <h1 style="text-align: center;">Informe os dados do seu cartão de crédito ou débito.</h1>
                             <div class="campodetexto">
                                 <label for="Nome">Nome</label>
-                                <input type="text" name="usuario" placeholder="Nome" id="usuario" required>
+                                <input type="text" name="nome" placeholder="Nome" id="nome" required>
                                 <!-- Campo de Nome -->
                             </div>
                             <div class="campodetexto">
                                 <label for="sobrenome">Sobrenome</label>
-                                <input type="text" name="sobrenome" placeholder="Sobrenome" id="email" required>
+                                <input type="text" name="sobrenome" placeholder="Sobrenome" id="sobrenome" required>
                                 <!-- Campo de Sobrenome -->
                             </div>
                             <div class="campodetexto">
