alterações html e css

--- a/HTML/cadastro.html
+++ b/HTML/cadastro.html
@@ -39,8 +39,8 @@
         </header>
     </section>
     <main>
-        <section> <!--Seção login-->
-            <div class="cadastro-principal"> <!--Div criada para o login principal-->
+        <section> <!--Seção cadastro-->
+            <!--Div criada para o login principal-->
                 <div class="movimentar">
                     <div class="left-cadastro">
                         <h1>Seu cadastro é um ingresso para uma jornada de conhecimento e entretenimento digital!</h1>
@@ -79,11 +79,10 @@
                                 </div>
                                 <p>Já tem uma conta? <a class="cor-entre" href="login.html">Entre</a></p>
                             </div>
-                            <button class="btn-cadastro" onclick="cadastrar()">Enviar</button>
+                            <a class="cor-entre-login" href="login.html"><button class="btn-cadastro" onclick="cadastrar()">Enviar</button></a>
                         </div>
                     </div>
                 </div>
-            </div>
         </section>
         <script src="../Assets/JS/main.js"></script>
     </main>
