--- a/HTML/dados-compra.html
+++ b/HTML/dados-compra.html
@@ -80,7 +80,7 @@
                                 <div class="check">
                                     <input type="checkbox" name="check" id="checkbox" required>
                                     <!-- Checkbox para aceitar os termos -->
-                                    <label for="checkbox">Li e aceito com os termos de uso e política de
+                                    <label for="checkbox">Li e aceito os termos de uso e política de
                                         privacidade</label>
                                 </div>
                             </div>
