altreações html e css

--- a/HTML/cadastro.html
+++ b/HTML/cadastro.html
@@ -80,6 +80,7 @@
                                 <p>Já tem uma conta? <a class="cor-entre" href="login.html">Entre</a></p>
                             </div>
                             <a class="cor-entre-login" href="login.html"><button class="btn-cadastro" onclick="cadastrar()">Enviar</button></a>
+                            <p id="mensagem_cadastro"></p>
                         </div>
                     </div>
                 </div>
