--- a/HTML/pag-planos.html
+++ b/HTML/pag-planos.html
@@ -23,8 +23,8 @@
                 <div class="links">
                     <ul class="nav-itens">
                         <li><a href="sobrenos.html">Sobre</a></li>
-                        <li><a href="pag-planos.html">Planos</a></li> 
-                        <li><a href="catalogo.html">Catálogo</a></li> 
+                        <li><a href="pag-planos.html">Planos</a></li>
+                        <li><a href="catalogo.html">Catálogo</a></li>
                     </ul>
                 </div>
                 <div class="btn"> <!-- Botões de login e cadastro -->
@@ -55,18 +55,20 @@
                                 <p>Compatibilidade com computador: Sim</p>
                             </li>
                             <li>
-                                <p>Downloads: Sim</p>
+                                <p>Downloads: Não</p>
                             </li>
                             <li>
                                 <p>Telas simultâneas: 1</p>
                             </li>
                         </ul>
                     </div>
-                    <a href="dados-compra.html" class="botao-body">
+                    <a href="dados-compra.html">
                         <div>
-                            <h3>
-                                Assinar
-                            </h3>
+                            <button class="botao-body">
+                                <h3>
+                                    Assinar
+                                </h3>
+                            </button>
                         </div>
                     </a>
                 </div>
@@ -91,11 +93,13 @@
                             </li>
                         </ul>
                     </div>
-                    <a href="dados-compra2.html" class="botao-body">
+                    <a href="dados-compra2.html">
                         <div>
-                            <h3>
-                                Assinar
-                            </h3>
+                            <button class="botao-body">
+                                <h3>
+                                    Assinar
+                                </h3>
+                            </button>
                         </div>
                     </a>
                 </div>
@@ -120,11 +124,13 @@
                             </li>
                         </ul>
                     </div>
-                    <a href="dados-compra3.html" class="botao-body">
+                    <a href="dados-compra3.html">
                         <div>
-                            <h3>
-                                Assinar
-                            </h3>
+                            <button class="botao-body">
+                                <h3>
+                                    Assinar
+                                </h3>
+                            </button>
                         </div>
                     </a>
                 </div>
