--- a/HTML/feedback.html
+++ b/HTML/feedback.html
@@ -24,8 +24,8 @@
                 <div class="links">
                     <ul class="nav-itens">
                         <li><a href="sobrenos.html">Sobre</a></li>
-                        <li><a href="pag-planos.html">Planos</a></li> 
-                        <li><a href="catalogo.html">Catálogo</a></li> 
+                        <li><a href="pag-planos.html">Planos</a></li>
+                        <li><a href="catalogo.html">Catálogo</a></li>
                     </ul>
                 </div>
                 <div class="btn"> <!-- Botões de login e cadastro -->
@@ -41,7 +41,7 @@
     </section>
     <main>
         <section> <!-- Seção de feedback do site -->
-            <form action="contato.html">
+            <form action="#">
                 <div class="avaliacao">
                     <h2>Feedback</h2>
                     <label for="nome">Nome:</label>
@@ -51,7 +51,6 @@
                     <label for="msg">Mensagem</label>
                     <input type="text" id="mensagem" autocomplete="none" placeholder="Mensagem" required>
                     <div class="avaliacao-estrelas">
-                        
                         <a href="#" onclick="Avaliar(1);">
                             <img src="../Img/star0.png" id="s1">
                         </a>
@@ -59,7 +58,7 @@
                             <img src="../Img/star0.png" id="s2">
                         </a>
                         <a href="#" onclick="Avaliar(3);">
-                        <img src="../Img/star0.png" id="s3">
+                            <img src="../Img/star0.png" id="s3">
                         </a>
                         <a href="#" onclick="Avaliar(4);">
                             <img src="../Img/star0.png" id="s4">
