--- a/HTML/cadastro.html
+++ b/HTML/cadastro.html
@@ -23,17 +23,18 @@
                 <div class="links">
                     <ul class="nav-itens">
                         <li><a href="sobrenos.html">Sobre</a></li>
-                        <li><a href="pag-planos.html">Planos</a></li> 
-                        <li><a href="catalogo.html">Catálogo</a></li> 
+                        <li><a href="pag-planos.html">Planos</a></li>
+                        <li><a href="catalogo.html">Catálogo</a></li>
                     </ul>
-                </div>
-                <div class="btn"> <!-- Botões de login e cadastro -->
-                    <a href="login.html">
-                        <button class="login">LOGIN</button> <!-- Botão "LOGIN" -->
-                    </a>
-                    <a href="cadastro.html">
-                        <button class="cadastro">CADASTRO</button> <!-- Botão "CADASTRO" -->
-                    </a>
+
+                    <div class="btn"> <!-- Botões de login e cadastro -->
+                        <a href="login.html">
+                            <button class="login">LOGIN</button> <!-- Botão "LOGIN" -->
+                        </a>
+                        <a href="cadastro.html">
+                            <button class="cadastro">CADASTRO</button> <!-- Botão "CADASTRO" -->
+                        </a>
+                    </div>
                 </div>
             </nav>
         </header>
@@ -41,49 +42,52 @@
     <main>
         <section> <!--Seção cadastro-->
             <!--Div criada para o login principal-->
-                <div class="movimentar">
-                    <div class="left-cadastro">
-                        <h1>Seu cadastro é um ingresso para uma jornada de conhecimento e entretenimento digital!</h1>
-                    </div>
-                    <div class="right-cadastro">
-                        <div class="card-cadastro"> <!--Card do login-->
-                            <h1>CADASTRE-SE AQUI</h1>
-                            <div class="campodetexto">
-                                <label for="Nome">Usuário</label>
-                                <input type="text" name="usuario" placeholder="Digite seu usuário aqui" id="cadastro_usuario" required>
-                            </div>
-                            <div class="campodetexto">
-                                <label for="email">Email</label>
-                                <input type="text" name="usuario" placeholder="Informe seu email" id="cadastro_email" required>
-                            </div>
-                            <div class="campodetexto">
-                                <label for="senha">Senha</label>
-                                <input type="password" name="usuario" placeholder="Crie uma senha" id="cadastro_senha" required>
-                            </div>
-                            <div class="campodetexto">
-                                <label for="data">Informe sua data de nascimento</label>
-                                <input type="date" name="usuario" placeholder="dd/mm/aaaa" id="data" required>
-                            </div>
-                            <div class="campodetexto">
-                                <label for="cidade">Cidade</label>
-                                <input type="text" name="usuario" placeholder="Informe sua cidade" id="cidade" required>
-                            </div>
-                            <div class="campodetexto">
-                                <label for="pais">País</label>
-                                <input type="text" name="usuario" placeholder="Digite seu país" id="país" required>
-                            </div>
-                            <div class="campodetexto">
-                                <div class="check">
-                                    <input type="checkbox" name="usuario" id="checkbox" required>
-                                    <label for="checkbox">Li e aceito os termos de uso e a política de privacidade.</label>
-                                </div>
-                                <p>Já tem uma conta? <a class="cor-entre" href="login.html">Entre</a></p>
-                            </div>
-                            <a class="cor-entre-login" href="login.html"><button class="btn-cadastro" onclick="cadastrar()">Enviar</button></a>
-                            <p id="mensagem_cadastro"></p>
+            <div class="movimentar">
+                <div class="left-cadastro">
+                    <h1>Seu cadastro é um ingresso para uma jornada de conhecimento e entretenimento digital!</h1>
+                </div>
+                <div class="right-cadastro">
+                    <div class="card-cadastro"> <!--Card do login-->
+                        <h1>CADASTRE-SE AQUI</h1>
+                        <div class="campodetexto">
+                            <label for="Nome">Usuário</label>
+                            <input type="text" name="usuario" placeholder="Digite seu usuário aqui"
+                                id="cadastro_usuario" required>
                         </div>
+                        <div class="campodetexto">
+                            <label for="email">Email</label>
+                            <input type="text" name="usuario" placeholder="Informe seu email" id="cadastro_email"
+                                required>
+                        </div>
+                        <div class="campodetexto">
+                            <label for="senha">Senha</label>
+                            <input type="password" name="usuario" placeholder="Crie uma senha" id="cadastro_senha"
+                                required>
+                        </div>
+                        <div class="campodetexto">
+                            <label for="data">Informe sua data de nascimento</label>
+                            <input type="date" name="usuario" placeholder="dd/mm/aaaa" id="data" required>
+                        </div>
+                        <div class="campodetexto">
+                            <label for="cidade">Cidade</label>
+                            <input type="text" name="usuario" placeholder="Informe sua cidade" id="cidade" required>
+                        </div>
+                        <div class="campodetexto">
+                            <label for="pais">País</label>
+                            <input type="text" name="usuario" placeholder="Digite seu país" id="país" required>
+                        </div>
+                        <div class="campodetexto">
+                            <div class="check">
+                                <input type="checkbox" name="usuario" id="checkbox" required>
+                                <label for="checkbox">Li e aceito os termos de uso e a política de privacidade.</label>
+                            </div>
+                            <p>Já tem uma conta? <a class="cor-entre" href="login.html">Entre</a></p>
+                        </div>
+                        <a href="login.html"><button class="btn-cadastro" onclick="cadastrar()">Enviar</button></a>
+                        <p id="mensagem_cadastro"></p>
                     </div>
                 </div>
+            </div>
         </section>
         <script src="../Assets/JS/main.js"></script>
     </main>
