alterações para responsividade

--- a/HTML/feedback.html
+++ b/HTML/feedback.html
@@ -18,7 +18,7 @@
                 <input id="busca" type="search" placeholder="Busque seu filme!">
             </div>
             <a href="../index.html" class="logo"> <!-- Link para a página inicial -->
-                <img src="../Img/logo.png" width="250px"> <!-- Logo -->
+                <img class="tamanho-logo" src="../Img/logo.png" width="250px"> <!-- Logo -->
             </a>
             <nav> <!-- Barra de navegação -->
                 <div class="links">
@@ -27,14 +27,15 @@
                         <li><a href="pag-planos.html">Planos</a></li>
                         <li><a href="catalogo.html">Catálogo</a></li>
                     </ul>
-                </div>
-                <div class="btn"> <!-- Botões de login e cadastro -->
-                    <a href="login.html">
-                        <button class="login">LOGIN</button> <!-- Botão "LOGIN" -->
-                    </a>
-                    <a href="cadastro.html">
-                        <button class="cadastro">CADASTRO</button> <!-- Botão "CADASTRO" -->
-                    </a>
+
+                    <div class="btn"> <!-- Botões de login e cadastro -->
+                        <a href="login.html">
+                            <button class="login">LOGIN</button> <!-- Botão "LOGIN" -->
+                        </a>
+                        <a href="cadastro.html">
+                            <button class="cadastro">CADASTRO</button> <!-- Botão "CADASTRO" -->
+                        </a>
+                    </div>
                 </div>
             </nav>
         </header>
