--- a/HTML/sobrenos.html
+++ b/HTML/sobrenos.html
@@ -26,14 +26,15 @@
                         <li><a href="pag-planos.html">Planos</a></li>
                         <li><a href="catalogo.html">Catálogo</a></li>
                     </ul>
-                </div>
-                <div class="btn"> <!-- Botões de login e cadastro -->
-                    <a href="login.html">
-                        <button class="login">LOGIN</button> <!-- Botão "LOGIN" -->
-                    </a>
-                    <a href="cadastro.html">
-                        <button class="cadastro">CADASTRO</button> <!-- Botão "CADASTRO" -->
-                    </a>
+
+                    <div class="btn"> <!-- Botões de login e cadastro -->
+                        <a href="login.html">
+                            <button class="login">LOGIN</button> <!-- Botão "LOGIN" -->
+                        </a>
+                        <a href="cadastro.html">
+                            <button class="cadastro">CADASTRO</button> <!-- Botão "CADASTRO" -->
+                        </a>
+                    </div>
                 </div>
             </nav>
         </header>
@@ -51,7 +52,7 @@
                             <div class="h1-quemsomos">
                                 <h2 style="color: #00ff88; position: relative; top: 25px; text-align: center;">Quem
                                     somos:</h2>
-                                <h1 style="color: white; font-size: 25px; text-align: center; padding: 8px;">Na
+                                <h1 style="color: white; text-align: center; padding: 8px;">Na
                                     Techflix, a nossa
                                     paixão pela tecnologia se funde com a magia do entretenimento, criando uma
                                     experiência única para os aficionados por tecnologia e entusiastas de séries e
@@ -62,7 +63,7 @@
                             <div class="diferenciais">
                                 <h2 style="color: #00ff88; position: relative; top: 25px; text-align: center;">
                                     Diferenciais:</h2>
-                                <ul style="color: white; font-size: 25px;">
+                                <ul style="color: white;">
                                     <li>Atendimento dedicado ao cliente</li>
                                     <li>Séries e filmes em lançamento</li>
                                     <li>Conteúdo Exclusivo</li>
@@ -71,8 +72,7 @@
                             </div>
                             <div class="nossa-missao">
                                 <h2 style="color: #00ff88; position: relative; top: 25px; text-align: center;">Nossa missão:</h2>
-                                <h2
-                                    style="color: white; font-size: 25px; position: relative; top: 66px; text-align: center; padding: 8px;">
+                                <h2 style="color: white; position: relative; top: 66px; text-align: center; padding: 8px;">
                                     Nossa missão é simples: proporcionar a você, nosso estimado assinante, uma jornada
                                     de entretenimento inigualável, repleta de descobertas fascinantes sobre o mundo da
                                     TI. Queremos inspirar sua imaginação, estimular sua curiosidade e proporcionar-lhe
