--- a/HTML/feedback.html
+++ b/HTML/feedback.html
@@ -18,7 +18,7 @@
                 <input id="busca" type="search" placeholder="Busque seu filme!">
             </div>
             <a href="../index.html" class="logo"> <!-- Link para a página inicial -->
-                <img class="tamanho-logo" src="../Img/logo.png" width="250px"> <!-- Logo -->
+                <img class="tamanho_logo" src="../Img/logo.png" width="250px"> <!-- Logo -->
             </a>
             <nav> <!-- Barra de navegação -->
                 <div class="links">
